      use on USB sticks.
    - Document USB booting on powerpc. This involved splitting out the
      documentation for USB booting on i386 a bit.
    - Since power3 and power4 no longer build images with the 2.4 kernel,
      remove their KERNELVERSION_2.4 variables and kernel-build-2.4*
      build-dependencies.
    - Switch libparted1.6-0 build-dependency to libparted1.6-12.
  * Christian Perrier
    - Add 7 missing characters to installer/build/needed-characters/ar
      Thanks to Naidim Shaikli and Arabeyes contributors
    - Add the list of needed characters for Belarussian
    - Add the list of needed characters for Esperanto
  * Martin Michlmayr
    - Add a ramdisk_size parameter to sb1-swarm-bn's boot configuration
      file since the initrd is now bigger than what the kernel expects.
    - Switch Cobalt to use the new-style initrd parameter rd_start and
      rd_size.
  * Stephen R. Marenka
    - Add m68k/amiga startup scripts with thanks to and the permission of
      Christian T. Steigies <cts@debian.org>.
  * Frans Pop
    - Implement new-generation build scripts for sarge branch.
    - Make kernel-version for sparc64 ide-modules variable by using an
      #include rather than the full module name.
  * Joshua Kwan
    - Change sparc kernels to use 2.6.8-2 udebs.
  * Joey Hess
    - Switch i386, ia64, alpha, and hppa to use the -2 kernel abiname.
    - Add text frontend to alpha netboot image for general old-timey keenness.
    - Dropped hppa 2.4 images.
    - Removed various things from the hppa 2.6 netboot initrd to make
      it small enough to work again.
    - Add cdrom-modules to hppa cdrom initrd, this is a new package as of the
      -2 kernel.
    - Add socket-modules to all hppa initrds, also newly modularised.
  * Bdale Garbee
    - hppa 2.6 cdrom initrd needs more modules
  * Kurt Roeckx
    - Remove unused config files for amd64.
    - Update kernel version for amd64 to 2.6.8-10